# Rust-webServer

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
src/: main.rs  models.rs
src/handlers/: auth_handler.rs  post_handler.rs
src/lib/: auth.rs  connection.rs  mod.rs
src/models/: jwt_model.rs  mod.rs  post_model.rs  response.rs
src/service/: post_service.rs
