[package]
name = "prueba2"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.1.1", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
diesel-async = "0.4.1"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
